// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test BlockComponent 1`] = `
<div
  className="block current-block col"
>
  <img
    alt="bulldozer"
    src="bulldozer.gif"
    style={
      Object {
        "transform": "rotateY(180deg) rotateZ(270deg)",
      }
    }
  />
</div>
`;

exports[`Test BlockComponent 2`] = `
<div
  className="block current-block col"
>
  <img
    alt="bulldozer"
    src="bulldozer.gif"
    style={
      Object {
        "transform": "none",
      }
    }
  />
</div>
`;

exports[`Test BlockComponent 3`] = `
<div
  className="block current-block col"
>
  <img
    alt="bulldozer"
    src="bulldozer.gif"
    style={
      Object {
        "transform": "rotateY(180deg) rotateZ(90deg)",
      }
    }
  />
</div>
`;

exports[`Test BlockComponent 4`] = `
<div
  className="block current-block col"
>
  <img
    alt="bulldozer"
    src="bulldozer.gif"
    style={
      Object {
        "transform": "rotateY(180deg)",
      }
    }
  />
</div>
`;
